--- a/main.html
+++ b/main.html
@@ -7,6 +7,9 @@
 </head>
 
 <body>
+	<p id="yellow" style="background: yellow; border: 1px solid green;">Paragraph1</p>
+	<p id="red" style="background: red; border: 1px solid black;">Paragraph1</p>
+	<p id="green" style="background: green; border: 1px solid yellow;">Paragraph1</p>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
